2008-03-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* data/UFF.prm: Improved N sp, sp2 atom typing, suggested by Bob Hanson.

	* src/forcefields/forcefielduff.*: Many bug fixes for angle and
	torsion terms, suggested by Bob Hanson (via Jmol implementation).

	* test/files/uffresults.txt: Updated for above changes.

	* configure, configure.in, */Makefile.in: Bump to 2.2.0b5 and
	update build files.

2008-03-27  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* test/files/uffresults.txt: Update UFF results for recent bug fixes.

2008-03-27  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: Always call SetCoordinates in Setup.

2008-03-27  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h, src/forcefield.cpp: Working
	Newton2NumLineSearch. Used only for SteepestDescent at the moment.

2008-03-26 Chris Morley

	* include/openbabel/parsmart.h, src/parsmart.cpp:
	Fix bug #1906462. If SMARTS pattern contains [H], the matching
	now is done on n explicit hydrogen copy of the molecules. Extra bool
	in struct Pattern and mods to AllocPattern, SMARTSParser, Match.
	Have to be careful with the mods: Match is called more than
	420 times in doing a smi to smi conversion with a SMARTS filter!

2008-03-25  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefielduff.cpp: changed anglecalc.zi = ..[0] to
	... [5]. This bug was reported by Bob Hanson in mail.

2008-03-22  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: Fix LineSearch(*,*) to respect fixed atoms.
	Don't calculate gradient in NumericalDerivative.

2008-03-24 Chris Morley

	* src/formats/gaussformat.cpp: Fix bug #1924342 by looking for
	"Multiplicity" as suggested by Richard West

2008-03-24  Noel O'Boyle  <baoilleach@gmail.com>
	
	* windows-vc2005/OBPython/openbabel.py: Removed from SVN (it is
	created with SWIG as part of the build process)

2008-03-24  Noel O'Boyle  <baoilleach@gmail.com>
	